# SFML-Imgui-OpenGL-Example

./: .gitignore  CMakeLists.txt  imgui.ini
scripts/: build.bat  build.sh  debug.sh  run.bat  run.sh
src/: Camera.cpp  Camera.h  GUI.cpp  GUI.h  Maths.cpp  Utility.cpp  Utility.h  main.cpp
src/Graphics/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
